fixes drag icon on canvas and maps's legend display defaults to visible giving all details, BH-41, BH-34

--- a/web-app/css/PhyloJive.css
+++ b/web-app/css/PhyloJive.css
@@ -51,6 +51,7 @@ draw border on this div
 #info-canvaswidget{
     border: 2px;
     border-style: solid;
+    cursor: move;
 }
 .box {
   width: 10px;
